--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ pydantic-settings==2.12.0
 pydantic_core==2.41.5
 PyMySQL==1.1.2
 python-dotenv==1.2.1
+ruff==0.14.13
 SQLAlchemy==2.0.45
 starlette==0.50.0
 typing-inspection==0.4.2
