--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -1,8 +1,8 @@
 name: ruff
 
 on:
-  pull_request_review:
-    types: [ submitted ]
+  pull_request:
+    branches: [ "main" ]
 
 permissions:
   contents: read
@@ -11,12 +11,9 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     environment: lint
-    if: github.event.review.state == 'approved'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Run ruff check
         uses: astral-sh/ruff-action@v3
