--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -18,5 +18,10 @@ jobs:
       - name: Run ruff check
         uses: astral-sh/ruff-action@v3
         with:
-          src: "./backend/src"
+          src: "./backend"
           args: "check --config backend/pyproject.toml"
+
+      - name: Run pyright
+        uses: jakebailey/pyright-action@v1
+        with:
+          project: "backend/pyrightconfig.json"
