--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -5,5 +5,7 @@
     "moduleResolution": "Bundler",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts"]
+  "include": [
+    "vite.config.ts"
+  ]
 }
