--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   db:
     image: mysql:8.0
     env_file:
-      - ./backend/.env
+      - ./.env
     environment:
       MYSQL_DATABASE: ${DB_NAME}
       MYSQL_USER: ${DB_USERNAME}
@@ -22,7 +22,7 @@ services:
   app:
     build: ./backend
     env_file:
-      - ./backend/.env
+      - ./.env
     environment:
       DB_HOST: db
     ports:
@@ -58,7 +58,7 @@ services:
     profiles:
       - migrations
     env_file:
-      - ./backend/.env
+      - ./.env
     environment:
       DB_HOST: db
     depends_on:
