--- a/backend/pyrightconfig.json
+++ b/backend/pyrightconfig.json
@@ -1,6 +1,12 @@
 {
   "pythonVersion": "3.12",
-  "typeCheckingMode": "strict",
+  "typeCheckingMode": "basic",
+  "reportUnknownMemberType": "none",
+  "reportUnknownVariableType": "none",
+  "reportUnknownParameterType": "none",
+  "reportUnknownArgumentType": "none",
+  "reportOptionalMemberAccess": "none",
+  "reportMissingTypeStubs": "none",
   "include": [
     "src"
   ],
