--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,23 +4,33 @@ annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.1
 cffi==2.0.0
+cfgv==3.5.0
 click==8.3.1
 cryptography==46.0.3
+distlib==0.4.0
 fastapi==0.128.0
+filelock==3.20.3
 greenlet==3.3.0
 h11==0.16.0
+identify==2.6.16
 idna==3.11
 Mako==1.3.10
 MarkupSafe==3.0.3
+nodeenv==1.10.0
+passlib==1.7.4
+platformdirs==4.5.1
 pycparser==2.23
 pydantic==2.12.5
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
+PyJWT==2.10.1
 PyMySQL==1.1.2
 python-dotenv==1.2.1
+PyYAML==6.0.3
 ruff==0.14.13
 SQLAlchemy==2.0.45
 starlette==0.50.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 uvicorn==0.40.0
+virtualenv==20.36.1
