--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,9 @@ services:
       start_period: 40s
 
   app:
-    build: ./backend
+    build:
+      context: .
+      dockerfile: backend/Dockerfile
     env_file:
       - ./.env
     environment:
@@ -54,7 +56,9 @@ services:
         condition: service_healthy
 
   migrator:
-    build: ./backend
+    build:
+      context: .
+      dockerfile: backend/Dockerfile
     profiles:
       - migrations
     env_file:
@@ -66,7 +70,7 @@ services:
         condition: service_healthy
     command: alembic upgrade head
     volumes:
-      - ./backend:/app
+      - ./backend:/app/backend
 
 volumes:
   db_data:
