--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,20 +1,24 @@
-FROM python:3.12-slim
+FROM python:3.14.2-slim
 
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
-    PYTHONPATH=/app
+    PYTHONPATH=/app/backend \
+    UV_SYSTEM_PYTHON=1
 
 WORKDIR /app
 
-COPY requirements.txt /app/requirements.txt
+COPY pyproject.toml uv.lock /app/
 RUN pip install --no-cache-dir --upgrade pip \
-    && pip install --no-cache-dir -r /app/requirements.txt
+    && pip install --no-cache-dir uv \
+    && uv sync --frozen --no-dev
 
-COPY . /app
+COPY backend /app/backend
 
 RUN adduser --disabled-password --gecos "" app \
     && chown -R app:app /app
 
 USER app
+
+WORKDIR /app/backend
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
