--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,8 @@ FROM python:3.14.2-slim
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
     PYTHONPATH=/app/backend \
-    UV_SYSTEM_PYTHON=1
+    UV_PROJECT_ENVIRONMENT=/app/.venv \
+    PATH="/app/.venv/bin:$PATH"
 
 WORKDIR /app
 
@@ -20,5 +21,7 @@ RUN adduser --disabled-password --gecos "" app \
 USER app
 
 WORKDIR /app/backend
+
+RUN python -m uvicorn --version
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
