--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "sqlalchemy>=2.0.0",
     "uvicorn>=0.40.0",
     "cryptography>=46.0.3",
+    "ruff>=0.14.14",
 ]
 
 [tool.ruff]
@@ -25,36 +26,16 @@ src = ["backend/src"]
 exclude = [
     "backend/migrations",
     "backend/scripts",
-    ".bzr",
-    ".direnv",
-    ".eggs",
-    ".git",
-    ".git-rewrite",
-    ".hg",
-    ".ipynb_checkpoints",
-    ".mypy_cache",
-    ".nox",
-    ".pants.d",
-    ".pyenv",
-    ".pytest_cache",
-    ".pytype",
-    ".ruff_cache",
-    ".svn",
-    ".tox",
     ".venv",
-    ".vscode",
-    "__pypackages__",
-    "_build",
-    "buck-out",
-    "build",
-    "dist",
-    "node_modules",
-    "site-packages",
-    "venv",
 ]
 
 [tool.ruff.lint]
-select = ["E", "F", "B", "N", "UP", "SIM", "C4", "T20", "ARG", "ASYNC", "ANN", "FBT", "COM", "C4", "PLC", "DTZ", "EM", "PIE", "T20", "PT", "RSE", "RET", "TC"]
-ignore = ["E501", "B008"]
+select = ["FURB", "W", "PLW", "RUF", "E", "F", "B", "N", "UP", "SIM", "C4", "T20", "ARG", "ASYNC", "ANN", "FBT", "COM", "C4", "PLC", "DTZ", "EM", "PIE", "T20", "PT", "RSE", "RET", "TRY"]
+ignore = [
+    "E501",
+    "B008",
+    "RET504",
+    "W293",
+]
 
 [tool.ruff.format]
