--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "pydantic-quest"
 version = "0.1.0"
-description = "Add your description here"
+description = "Free interactive course on Pydantic"
 requires-python = ">=3.14.2"
 dependencies = [
     "alembic>=1.16.0",
@@ -17,6 +17,14 @@ dependencies = [
     "uvicorn>=0.40.0",
     "cryptography>=46.0.3",
     "ruff>=0.14.14",
+]
+
+[project.optional-dependencies]
+test = [
+    "aiosqlite>=0.20.0",
+    "pytest>=8.3.0",
+    "pytest-asyncio>=0.25.0",
+    "pytest-cov>=5.0.0",
 ]
 
 [tool.ruff]
