--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
 testpaths = backend/tests
 asyncio_mode = auto
-addopts = --cov=backend/src/app --cov-report=term-missing --cov-fail-under=80
+addopts = --cov=src --cov-report=term-missing --cov-fail-under=80
 pythonpath = backend
