--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,12 @@ services:
         condition: service_healthy
       piston:
         condition: service_healthy
+    healthcheck:
+      test: [ "CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/health')" ]
+      interval: 1m
+      timeout: 3s
+      retries: 5
+      start_period: 10s
     command: [ "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload" ]
     profiles:
       - dev
@@ -80,7 +86,7 @@ services:
     profiles:
       - dev
     depends_on:
-      app:
+      app-dev:
         condition: service_healthy
 
   piston:
